@@ -142,9 +142,9 @@ int main(int argc, char** argv)
   susyAna->setXsec(xsec);
   susyAna->setMetFlavor(metFlav);
 
-  // GRL
-  TString grl = gSystem->ExpandPathName("$ROOTCOREDIR/data/MultiLep/data12_8TeV.periodAllYear_DetStatus-v53-pro13-04_CoolRunQuery-00-04-08_All_Good_HCP.xml");
-  susyAna->setGRLFile(grl);
+  // GRL - now set in SusyD3PDAna
+  //TString grl = gSystem->ExpandPathName("$ROOTCOREDIR/data/MultiLep/data12_8TeV.periodAllYear_DetStatus-v53-pro13-04_CoolRunQuery-00-04-08_All_Good_HCP.xml");
+  //susyAna->setGRLFile(grl);
 
   // Run the job
   if(nEvt<0) nEvt = nEntries;
